RESOLVED FIXED34453
[V8] Raising an exception while setting timeout/interval from a detached frame
https://bugs.webkit.org/show_bug.cgi?id=34453
Summary [V8] Raising an exception while setting timeout/interval from a detached frame
Kavita Kanetkar
Reported 2010-02-01 15:54:40 PST
In http://trac.webkit.org/changeset/53439, raising exception was added to JSC bindings. Doing the same in V8 bindings.
Attachments
proposed fix (1.91 KB, patch)
2010-02-01 16:39 PST, Kavita Kanetkar
no flags
patch2 (2.05 KB, patch)
2010-02-01 18:39 PST, Kavita Kanetkar
no flags
Kavita Kanetkar
Comment 1 2010-02-01 16:39:20 PST
Created attachment 47877 [details] proposed fix
Dmitry Titov
Comment 2 2010-02-01 18:13:21 PST
Is it possible to test this?
Kavita Kanetkar
Comment 3 2010-02-01 18:16:55 PST
I tested it locally on my machine, but I do not have the permission to run it on tribots. Let me know.
Kavita Kanetkar
Comment 4 2010-02-01 18:39:49 PST
Created attachment 47898 [details] patch2 Mentioned Chrome bug that has the layout test reference in ChangeLog.
Dmitry Titov
Comment 5 2010-02-01 18:43:54 PST
Comment on attachment 47898 [details] patch2 So it fixes existing layout test that fails in Chromium (fast/dom/Window/timer-null-script-execution-context.html). Great. r=me
WebKit Commit Bot
Comment 6 2010-02-02 04:43:46 PST
Comment on attachment 47898 [details] patch2 Clearing flags on attachment: 47898 Committed r54227: <http://trac.webkit.org/changeset/54227>
WebKit Commit Bot
Comment 7 2010-02-02 04:43:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.