2010-02-02  Kavita Kanetkar  <kkanetkar@chromium.org>

Reviewed by Dmitry Titov.

        [V8] Raising an exception while setting timeout/interval from a detached frame
        https://bugs.webkit.org/show_bug.cgi?id=34453
        This fixes the issue/failing test mentioned in Chromium bug:
        http://code.google.com/p/chromium/issues/detail?id=32671

        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::WindowSetTimeoutImpl):

Canonical link: https://commits.webkit.org/45571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54227 268f45cc-cd09-0410-ab3c-d52691b4dbfc